# svhier

./: CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml  docs.yml
docs/: architecture.md  conf.py  index.md  usage.md
src/icinst/: cli.py  parser.py
src/svhier/: __init__.py  cli.py  parser.py
tests/: test_cli.py  test_parser.py
verilog/: broken.sv  broken_pkg.sv  cross_file_sub.sv  cross_file_top.sv  deep_hierarchy.sv  legacy.v  parameterized.sv  pkg_import.sv  simple.sv  test.sv  with_interface.sv
verilog/include/: my_defs.svh
verilog/uvm/: apb_agent.sv  apb_if.sv  tb_top.sv  uvm_pkg.sv
