[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "icinst"
version = "0.1.0"
description = ""
requires-python = ">=3.10"
dependencies = [
    "pyslang",
    "ruamel.yaml",
]

[project.scripts]
icinst = "icinst.cli:main"

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/icinst"]
